--- a/last-seen-service/Makefile
+++ b/last-seen-service/Makefile
@@ -3,7 +3,7 @@ proto:
 	mkdir -p pb
 	protoc --go_out=./pb --go_opt=paths=source_relative \
 		--go-grpc_out=./pb --go-grpc_opt=paths=source_relative \
-		--proto_path=../protos \
+		--proto_path=../protos/lastseen \
 	lastseen.proto
 
 .PHONY: clean
