chore: preserve container data with volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    volumes:
+      - last_seen_data:/data/db
 
+volumes:
+  last_seen_data:
