chore: build with optimizations

--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -22,7 +22,7 @@ RUN mkdir -p pb && \
 
 COPY user-service/main.go ./main.go
 
-RUN go build -o myapp main.go
+RUN go build -ldflags="-s -w" -o myapp main.go
 
 # 2. Run stage
 FROM alpine:latest
