--- a/nginx_dev.conf
+++ b/nginx_dev.conf
@@ -1,6 +1,6 @@
-upstream gateway {
-    server gateway:50051
-}
+# upstream gateway {
+#     server gateway:50051;
+# }
 
 upstream user_service {
     server user-service:50051;
@@ -18,11 +18,11 @@ server {
     listen 80;
     http2 on;
 
-    location / {
-        grpc_pass grpc://gateway;
-        rewrite ^/(.*)$ /$1 break;
-        error_page 502 = /error502grpc;
-    }
+    # location / {
+    #     grpc_pass grpc://gateway;
+    #     rewrite ^/(.*)$ /$1 break;
+    #     error_page 502 = /error502grpc;
+    # }
 
     location /user/ {
         grpc_pass grpc://user_service;
