--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,15 @@
 services:
 
-  # gateway:
-  #   build:
-  #     context: .
-  #     dockerfile: ./gateway/Dockerfile
-  #   environment:
-  #     REFLECTION: true
+  gateway:
+    build:
+      context: .
+      dockerfile: ./gateway/Dockerfile.dev
+    environment:
+      REFLECTION: true
+    volumes:
+      - ./gateway/src:/app/src
+      - ./gateway/package.json:/app/package.json
+      - /app/node_modules
 
   user-service:
     build:
@@ -44,17 +48,6 @@ services:
     image: mongo:8.0
     volumes:
       - last_seen_data_dev:/data/db
-  
-  nginx:
-    image: nginx:1.29-alpine
-    ports:
-      - "8080:80"
-    volumes:
-      - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - auth-service
-      - user-service
-      - last-seen-service
 
 volumes:
   last_seen_data_dev:
