--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,14 +1,13 @@
 # Build stage
 FROM node:24-alpine AS builder
 
-# RUN apt update && apt install -y protobuf-compiler make
 RUN apk add --no-cache protobuf protobuf-dev make
 
 WORKDIR /app
 
 COPY gateway/package.json gateway/yarn.lock ./
 
-RUN yarn install
+RUN yarn install --frozen-lockfile
 
 COPY gateway/Makefile ./
 COPY protos/ ../protos
@@ -25,6 +24,7 @@ FROM node:24-alpine AS production
 WORKDIR /app
 
 COPY --from=builder /app/package.json /app/yarn.lock ./
+COPY --from=builder /protos ../protos
 
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
