--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       USER_SERVICE_URL: ${USER_SERVICE_URL:-user-service:50051}
       AUTH_SERVICE_URL: ${AUTH_SERVICE_URL:-auth-service:50051}
       LAST_SEEN_SERVICE_URL: ${LAST_SEEN_SERVICE_URL:-last-seen-service:50051}
+
+      ACCESS_TOKEN_SECRET: "${ACCESS_TOKEN_SECRET}"
+      REFRESH_TOKEN_SECRET: "${REFRESH_TOKEN_SECRET}"
     ports:
       - "50051:50051"
     depends_on:
